src/objects/Contract_LDC__c.object
<CustomObject>
    <description>Junction Object many to many relationship (Contract/LDC)</description>
    <fields>
        <fullName>Account_Type_Code__c</fullName>
        <label>Account Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RETAIL_STANDALONE</fullName>
                </value>
                <value>
                    <fullName>RETAIL_SUBACCT</fullName>
                </value>
                <value>
                    <fullName>WHOLESALE</fullName>
                </value>
                <value>
                    <fullName>FLOW_THROUGH</fullName>
                </value>
                <value>
                    <fullName>UCBNONPOR_RR</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_RR</fullName>
                </value>
                <value>
                    <fullName>RETAIL_FRIEND</fullName>
                </value>
                <value>
                    <fullName>UCBPOR_BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <description>This field is created to store the bill method at the contract ldc level</description>
        <inlineHelpText>DUAL
Rate Ready
Bill Ready
SBO/ESP</inlineHelpText>
        <label>LDC Bill Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Identifier__c</fullName>
        <formula>Contract__r.LodeStar_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract LDCS</relationshipLabel>
        <relationshipName>Contract_LDCS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <formula>Contract__r.Contract_Counter_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <description>The Date that the customer initially requests to sign up with an Offer.  Only Applies to Mass Market Initial Enrollments.</description>
        <inlineHelpText>The Date that the customer initially requests to sign up with an Offer.  Only Applies to Mass Market Initial Enrollments.</inlineHelpText>
        <label>Enrollment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <label>External Reference ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSynchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to represent whether Contract LDC Record ben synchronized with the Billing system.</description>
        <inlineHelpText>Checkbox to represent whether Contract LDC Record ben synchronized with the Billing system.</inlineHelpText>
        <label>Is Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <description>LDC Account Number</description>
        <formula>LDC_Account__r.LDC_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDC Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Contract LDCS</relationshipLabel>
        <relationshipName>Contract_LDCS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LS_Response_Message__c</fullName>
        <label>LS Response Message</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LodeStar_Identifier__c</fullName>
        <description>Unique Field To Identify Lodestar Transaction</description>
        <label>LodeStar Identifier</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days__c</fullName>
        <formula>Term_Stop_Date__c - Term_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Contract__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+  Contract__r.Parent_Contract__c  , Contract__r.Parent_Contract__r.ContractNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Stop_Date__c</fullName>
        <label>Term Stop Date</label>
        <type>DateTime</type>
    </fields>
    <label>Contract LDC</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contract LDC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract LDCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>